...
                                        <rect key="frame" x="72" y="4.3333333333333144" width="223" height="71.666666666666671"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nGt-vK-9M5">
                                                <rect key="frame" x="0.0" y="0.0" width="61.666666666666664" height="23"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
...
                                    <constraint firstAttribute="height" constant="50" id="c4U-05-w2Q"/>
                                </constraints>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                    <connections>
                        <outlet property="continueButton" destination="Igx-x4-vUw" id="gxK-nf-qcD"/>
                        <outlet property="email" destination="Cvb-bC-OBJ" id="37k-K2-DeX"/>
                        <outlet property="password" destination="d4R-8g-VFe" id="3Cs-AR-OQb"/>
                        <outlet property="segment" destination="JN4-xP-h8W" id="hZ4-9v-bMH"/>
                        <outlet property="skipButton" destination="gOO-er-JBw" id="Asy-Ua-Kl5"/>
...
                            <rect key="frame" x="40" y="120.33333333333333" width="334" height="38.333333333333329"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XfX-Bo-sy4">
                                    <rect key="frame" x="0.0" y="0.0" width="334" height="38.333333333333336"/>
                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
...
                                    <segments>
                                        <segment title="Login"/>
                                        <segment title="Sign Up"/>
                                    </segments>
                                    <connections>
...
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" textContentType="username"/>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
