...
                                        </constraints>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xvU-UV-7Pi">
                                        <rect key="frame" x="156" y="44.666666666666657" width="63" height="36"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <action selector="signIn:" destination="yyu-yS-2ih" eventType="touchUpInside" id="PCJ-a6-YFJ"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <constraint firstItem="v3c-Oi-lha" firstAttribute="leading" secondItem="JVY-2z-8sW" secondAttribute="leading" id="aiM-Vf-w4H"/>
                            <constraint firstItem="TZ0-ot-PME" firstAttribute="top" secondItem="v3c-Oi-lha" secondAttribute="bottom" constant="40" id="hp1-jB-Ybl"/>
                            <constraint firstItem="v3c-Oi-lha" firstAttribute="top" secondItem="JVY-2z-8sW" secondAttribute="top" constant="30" id="jZ1-pg-2y6"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="JVY-2z-8sW"/>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="e8A-H7-fYM">
                        <barButtonItem key="rightBarButtonItem" id="Fp0-o5-fFD">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="quc-Oj-wDF">
                                <rect key="frame" x="329" y="7" width="30" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <connections>
                                    <action selector="changeTemp:" destination="yyu-yS-2ih" eventType="touchUpInside" id="pDS-Ye-SSo"/>
...
                                <rect key="frame" x="40" y="581" width="295" height="50"/>
                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="vaV-ro-Ogg"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Log out">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
