...
        geocoder.geocodeAddressString(textField.text ?? "") { (address, error) in
            guard error == nil, let address = address else {
                self.alert("Sorry, we weren't able to find that address", "Please try being more precise")
                return
            }
            
            let alert = UIAlertController(title: "Please select your address", message: nil, preferredStyle: .actionSheet)
            alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: { _ in
                alert.dismiss(animated: true, completion: nil)
            }))
            for addr in address {
                alert.addAction(UIAlertAction(title: "\(addr.name ?? ""), \(addr.locality ?? "")", style: .default, handler: { _ in
                    Helper.chain.set(addr.name ?? "", forKey: "address")
...
